thumbor/thumbor.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: thumbor-deployment
spec:
  # configure the desired number of replicas based on your requirements
  replicas: 2
  selector:
    matchLabels:
      app: thumbor
  template:
    metadata:
      labels:
        app: thumbor
    spec:
      containers:
      - name: thumbor
        image: ghcr.io/minimalcompact/thumbor:latest
        ports:
        - containerPort: 80
        resources: {}
      restartPolicy: Always

---
kind: Service
apiVersion: v1
metadata:
  name: thumbor
spec:
  # This would create a DigitalOcean Load Balancer
  # you can get its IP once it's up using:
  # `kubectl describe service thumbor-loadbalancer`
  # (look for LoadBalancer Ingress)
  type: ClusterIP
  selector:
    app: thumbor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
