thumbor/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: thumbor
spec:
  hosts:
  - "thumbor.vongjon.com"
  gateways:
  - istio-system/gateway
  - mesh
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: thumbor.thumbor.svc.cluster.local
        port:
          number: 80
